[project]
name = "grun"
version = "0.1.0"
description = "GPU Resource Manager - Run commands when GPU resources are available"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nvidia-ml-py3>=7.352.0",
    "rich>=13.9.4",
]

[project.optional-dependencies]
occupy = [
    "setproctitle>=1.3.5",
    "numba>=0.60.0",
    "numpy>=2.0.2",
]


[project.scripts]
grun = "grun.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
